# susiepca

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  data_susie.py  mypy.ini  requirement_dev.txt  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docdeploy  docdeploy.yaml
docs/: Makefile  changelog.rst  conduct.rst  conf.py  index.rst  license.rst  quickstart.rst  readme.rst  susiepca.rst
docs/api/: infer.rst  metrics.rst  sim.rst
examples/: spca_simulation.py  susie_package_test.py  susie_pca_simulation.py
susiepca/: __init__.py  common.py  infer.py  infer_annotate.py  infer_design_matrix.py  infer_new.py  io.py  metrics.py  sim.py  skeleton.py  sparse.py  susie_pca_sim.py  utils.py
tests/: conftest.py  test_infer.py  test_metric.py  test_mse.py  test_sim.py  test_skeleton.py
